<resources>
    <!-- ＡＰＰ ＳＥＴＴＩＮＧ -->
    <string name="app_name">CarSmart</string>
    <string name="action_settings">Settings</string>
    <string name="open">drawer_open</string>
    <string name="close">drawer_close</string>
    <string name="frag_default_content">Default Content</string>
    <string name="frag_empty_data">Empty data</string>
    <string name="frag_error_happens">Error happens</string>
    <string name="frag_loading">Loading...</string>
    <string name="frag_user_not_login">User not login</string>
    <string name="value_error_no_net">获取数据失败，请检查网络后重试</string>
    <string name="value_error_retry">重试</string>
    <string name="title_activity_settings">Settings</string>

    <string name="net_unavailable">世界上最遥远的距离就是没网，检查设置</string>

    <!-- ＬＯＧＩＮ -->
    <string name="string_login_hint_account">账号/手机号</string>
    <string name="string_login_hint_password">输入密码</string>

    <!-- ＲＥＧＩＳＴＥＲ -->
    <string name="string_register_hint_phone_number">请输入手机号</string>
    <string name="string_register_hint_verify_code">输入手机验证码</string>
    <string name="string_register_hint_password">设置账号密码</string>
    <string name="string_register_verifycode">获取验证码</string>

</resources>
