<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlError"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/view_error_cloud" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/value_error_no_net"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorSecondary" />

        <Button
            android:id="@+id/btnReload"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/button_retry_background"
            android:text="@string/value_error_retry"
            android:textColor="?android:attr/textColorSecondary" />

    </LinearLayout>

</RelativeLayout>