<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_register"
        android:contentDescription="@string/app_name" />

    <include layout="@layout/base_toolbar_layout" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_bg_height"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/common_dimen_30px"
        android:layout_marginRight="@dimen/common_dimen_30px"
        android:background="@color/register_bg_color"
        android:orientation="vertical"
        android:paddingLeft="@dimen/common_dimen_40px"
        android:paddingRight="@dimen/common_dimen_40px"
        android:paddingTop="@dimen/common_dimen_48px"
        tools:ignore="RtlHardcoded">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dimen_100px"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/common_dimen_100px"
                android:layout_height="@dimen/common_dimen_100px"
                android:background="@drawable/icon_register_phone"
                android:contentDescription="@string/app_name" />

            <View
                android:layout_width="@dimen/common_dimen_1px"
                android:layout_height="@dimen/common_dimen_54px"
                android:layout_marginRight="@dimen/common_dimen_32px"
                android:background="@color/text_common_hint" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_dimen_100px"
                android:background="@color/white"
                android:hint="@string/string_register_hint_phone_number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/text_common_color"
                android:textColorHint="@color/text_common_hint"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />

        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dimen_100px"
            android:layout_marginTop="@dimen/common_dimen_32px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/common_dimen_100px"
                android:layout_weight="2"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/common_dimen_100px"
                    android:layout_height="@dimen/common_dimen_100px"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icon_register_captcha" />

                <View
                    android:layout_width="1px"
                    android:layout_height="@dimen/common_dimen_54px"
                    android:layout_marginRight="@dimen/common_dimen_32px"
                    android:background="@color/text_common_hint" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_dimen_100px"
                    android:background="@color/white"
                    android:hint="@string/string_register_hint_verify_code"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/text_common_color"
                    android:textColorHint="@color/text_common_hint"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp" />

            </com.zhy.autolayout.AutoLinearLayout>

            <com.cn.smart.baselib.uiframework.bootstrap.BootstrapButton
                android:id="@+id/btnVerify"
                android:layout_width="@dimen/common_dimen_214px"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/common_dimen_16px"
                android:gravity="center"
                app:bootstrapBrand="primary"
                app:bootstrapSize="sm"
                app:bootstrapText="@string/string_register_verifycode"
                app:roundedCorners="false"
                app:showOutline="false" />

        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dimen_100px"
            android:layout_marginTop="@dimen/common_dimen_32px"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/common_dimen_100px"
                android:layout_height="@dimen/common_dimen_100px"
                android:background="@drawable/icon_register_password"
                android:contentDescription="@string/app_name" />

            <View
                android:layout_width="@dimen/common_dimen_1px"
                android:layout_height="@dimen/common_dimen_54px"
                android:layout_marginRight="@dimen/common_dimen_32px"
                android:background="@color/text_common_hint" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_dimen_100px"
                android:background="@color/white"
                android:hint="@string/string_register_hint_password"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/text_common_color"
                android:textColorHint="@color/text_common_hint"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />

        </com.zhy.autolayout.AutoLinearLayout>

        <com.cn.smart.baselib.uiframework.bootstrap.BootstrapButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dimen_100px"
            android:layout_marginBottom="@dimen/common_dimen_54px"
            android:layout_marginTop="@dimen/common_dimen_54px"
            android:gravity="center"
            app:bootstrapBrand="primary"
            app:bootstrapSize="lg"
            app:bootstrapText="注册"
            app:roundedCorners="false"
            app:showOutline="false" />

        <com.cn.smart.baselib.uiframework.bootstrap.AwesomeTextView
            android:id="@+id/atvRegisterNote"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:textSize="@dimen/text_size_12"
            app:bootstrapText="注册代表你已阅读并同意 车行智慧用户协议" />

    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoRelativeLayout>
