<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/img_login_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_header_height"
        android:layout_marginBottom="@dimen/common_dimen_64px"
        android:background="@drawable/bg_login_banner"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/img_login_header"
        android:layout_marginLeft="@dimen/common_dimen_68px"
        android:layout_marginRight="@dimen/common_dimen_68px"
        android:orientation="vertical">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dimen_100px"
            android:background="@color/color_ebebeb"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/common_dimen_100px"
                android:layout_height="@dimen/common_dimen_100px"
                android:background="@drawable/icon_login_user"
                android:contentDescription="@string/app_name" />

            <View
                android:layout_width="1px"
                android:layout_height="@dimen/common_dimen_54px"
                android:layout_marginRight="@dimen/common_dimen_32px"
                android:background="@color/text_common_hint"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_dimen_100px"
                android:background="@color/color_ebebeb"
                android:hint="@string/string_login_hint_account"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/text_common_color"
                android:textColorHint="@color/text_common_hint"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />

        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dimen_100px"
            android:layout_marginTop="@dimen/common_dimen_32px"
            android:background="@color/color_ebebeb"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/common_dimen_100px"
                android:layout_height="@dimen/common_dimen_100px"
                android:background="@drawable/icon_login_password"
                android:contentDescription="@string/app_name" />

            <View
                android:layout_width="@dimen/common_dimen_1px"
                android:layout_height="@dimen/common_dimen_54px"
                android:layout_marginRight="@dimen/common_dimen_32px"
                android:background="@color/text_common_hint"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_dimen_100px"
                android:background="@color/color_ebebeb"
                android:hint="@string/string_login_hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/text_common_color"
                android:textColorHint="@color/text_common_hint"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />

        </com.zhy.autolayout.AutoLinearLayout>

        <com.cn.smart.baselib.uiframework.bootstrap.AwesomeTextView
            android:id="@+id/atvFindMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginTop="@dimen/common_dimen_32px"
            android:textSize="@dimen/text_size_14"
            app:bootstrapText="忘记密码？" />

        <com.cn.smart.baselib.uiframework.bootstrap.BootstrapButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dimen_100px"
            android:layout_marginBottom="@dimen/common_dimen_64px"
            android:layout_marginTop="@dimen/common_dimen_36px"
            android:gravity="center"
            app:bootstrapBrand="primary"
            app:bootstrapSize="lg"
            app:bootstrapText="登录"
            app:roundedCorners="false"
            app:showOutline="false" />

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible">

            <com.cn.smart.baselib.uiframework.bootstrap.AwesomeTextView
                android:id="@+id/atvSignUp"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="2"
                android:gravity="start|center_vertical"
                app:bootstrapText="还没有账号？立即注册" />

            <com.cn.smart.baselib.uiframework.bootstrap.AwesomeTextView
                android:id="@+id/atvLook"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                app:bootstrapText="随便看看" />

            <ImageView
                android:layout_width="@dimen/common_dimen_32px"
                android:layout_height="@dimen/common_dimen_32px"
                android:layout_marginLeft="@dimen/common_dimen_16px"
                android:background="@drawable/icon_login_go"
                android:contentDescription="@string/app_name"
                tools:ignore="RtlHardcoded" />

        </com.zhy.autolayout.AutoLinearLayout>

    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoRelativeLayout>
